tests/paczka1/fuzzy1/18722331.err
Error in line 14: Lc2DBUzF A890 79,5
Error in line 31: dQ12ShQ3 S417 12,8
